# RL-small-model

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: 01_concepts.md  02_pure_rl_grpo.md  03_dynamic_hybrid_reasoning.md  04_reward_design.md  05_training_loop.md  06_scaling_to_real_models.md  07_autograd_appendix.md
examples/: quickstart.py
rl_small/: __init__.py  autograd.py  env.py  evaluate.py  grpo.py  hybrid.py  model.py  nn.py  optim.py  rewards.py  sampling.py  tokenizer.py  utils.py
scripts/: demo.py  evaluate.py  train.py
tests/: test_autograd.py  test_env.py  test_grpo.py  test_hybrid.py  test_model.py  test_rewards.py
