[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-small-model"
version = "0.1.0"
description = "Pure RL (GRPO) and dynamic hybrid reasoning for small models, from scratch in NumPy"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["rl_small"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
